# garpug

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
docs/plans/: 2026-02-27-garpug-design.md  2026-02-27-garpug-implementation.md  2026-02-27-tune-design.md
src/: cli.rs  data.rs  gpt2.rs  main.rs  model.rs  train.rs  tune.rs
