[package]
name = "garpug"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = "0.9"
candle-nn = "0.9"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
anyhow = "1"
reqwest = { version = "0.12", features = ["blocking"] }
indicatif = "0.17"

[features]
default = []
metal = ["candle-core/metal", "candle-nn/metal"]
